--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookstate/core": "^4.0.1",
     "@mediapipe/camera_utils": "^0.3.1675466862",
     "@mediapipe/drawing_utils": "^0.3.1675466124",
     "@mediapipe/holistic": "^0.5.1675471629",
@@ -17,6 +18,8 @@
     "@react-three/drei": "^9.105.4",
     "@react-three/fiber": "^8.16.2",
     "kalidokit": "^1.1.5",
+    "miniplex": "^2.0.0",
+    "miniplex-react": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "three": "0.162.0"
