--- a/package.json
+++ b/package.json
@@ -14,12 +14,18 @@
     "@mediapipe/drawing_utils": "^0.3.1675466124",
     "@mediapipe/holistic": "^0.5.1675471629",
     "@pixiv/three-vrm": "^2.1.1",
-    "@react-three/drei": "^9.105.4",
-    "@react-three/fiber": "^8.16.2",
+    "@react-three/drei": "^9.103.0",
+    "@react-three/fiber": "^8.16.1",
+    "@react-three/rapier": "^1.3.1",
+    "@theatre/core": "^0.5.1",
+    "@theatre/r3f": "^0.5.1",
+    "@theatre/studio": "^0.5.1",
+    "@types/react": "^18.2.25",
+    "@types/three": "^0.163.0",
     "kalidokit": "^1.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "0.162.0"
+    "three": "^0.163.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
