--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@pixiv/three-vrm": "^2.1.1",
     "@react-three/drei": "^9.105.4",
     "@react-three/fiber": "^8.16.2",
+    "@react-three/rapier": "^1.3.1",
     "kalidokit": "^1.1.5",
     "miniplex": "^2.0.0",
     "miniplex-react": "^2.0.1",
