--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.6.0",
     "postcss-loader": "^8.1.1",
     "style-loader": "^4.0.0",
     "ts-loader": "^9.5.1",
