--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rom",
+  "name": "standing-rom",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -19,6 +19,7 @@
     "@react-three/fiber": "^8.16.2",
     "@react-three/rapier": "^1.3.1",
     "kalidokit": "^1.1.5",
+    "lodash": "^4.17.21",
     "miniplex": "^2.0.0",
     "miniplex-react": "^2.0.1",
     "react": "^18.2.0",
@@ -26,6 +27,7 @@
     "three": "0.162.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@types/three": "^0.162.0",
