--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "standing-rom",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -19,7 +19,6 @@
     "@react-three/fiber": "^8.16.2",
     "@react-three/rapier": "^1.3.1",
     "kalidokit": "^1.1.5",
-    "lodash": "^4.17.21",
     "miniplex": "^2.0.0",
     "miniplex-react": "^2.0.1",
     "react": "^18.2.0",
@@ -27,13 +26,13 @@
     "three": "0.162.0"
   },
   "devDependencies": {
-    "@types/lodash": "^4.17.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@types/three": "^0.162.0",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "@yushijinhun/three-minifier-webpack": "^0.4.0",
     "css-loader": "^7.1.1",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
@@ -46,6 +45,7 @@
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "webpack": "^5.91.0",
+    "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^5.1.4"
   }
 }
