--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "html-webpack-plugin": "^5.6.0",
     "postcss-loader": "^8.1.1",
     "style-loader": "^4.0.0",
+    "terser-webpack-plugin": "^5.3.10",
     "ts-loader": "^9.5.1",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
