--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@mediapipe/drawing_utils": "^0.3.1675466124",
     "@mediapipe/holistic": "^0.5.1675471629",
     "@pixiv/three-vrm": "^2.1.1",
+    "@react-three/cannon": "^6.6.0",
     "@react-three/drei": "^9.105.4",
     "@react-three/fiber": "^8.16.2",
+    "lamina": "^1.1.23",
     "miniplex": "^2.0.0",
     "miniplex-react": "^2.0.1",
     "react": "^18.2.0",
