--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "clean": "rimraf dist build cache",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "dependencies": {
     "@hookstate/core": "^4.0.1",
