--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
     "@mediapipe/holistic": "^0.5.1675471629",
     "@pixiv/three-vrm": "^2.1.1",
     "@react-three/cannon": "^6.6.0",
-    "@react-three/drei": "^9.105.4",
-    "@react-three/fiber": "^8.16.2",
+    "@react-three/drei": "^9.106.0",
+    "@react-three/fiber": "^8.16.8",
     "lamina": "^1.1.23",
     "miniplex": "^2.0.0",
     "miniplex-react": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-three-update": "^0.4.0",
     "three": "0.162.0"
   },
   "devDependencies": {
