--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-three/cannon": "^6.6.0",
     "@react-three/drei": "^9.106.0",
     "@react-three/fiber": "^8.16.8",
+    "cannon-es": "^0.20.0",
     "lamina": "^1.1.23",
     "miniplex": "^2.0.0",
     "miniplex-react": "^2.0.1",
