--- a/package.json
+++ b/package.json
@@ -25,13 +25,12 @@
     "miniplex-react": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-three-update": "^0.4.0",
-    "three": "0.162.0"
+    "three": "0.164.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
-    "@types/three": "^0.162.0",
+    "@types/three": "0.164.0",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
