--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "@mediapipe/camera_utils": "^0.3.1675466862",
     "@mediapipe/drawing_utils": "^0.3.1675466124",
     "@mediapipe/holistic": "^0.5.1675471629",
-    "@pixiv/three-vrm": "^2.1.1",
+    "@pixiv/three-vrm": "2.1.2",
     "@react-three/cannon": "^6.6.0",
-    "@react-three/drei": "^9.106.0",
-    "@react-three/fiber": "^8.16.8",
+    "@react-three/drei": "^9.105.4",
+    "@react-three/fiber": "^8.16.2",
     "lamina": "^1.1.23",
     "miniplex": "^2.0.0",
     "miniplex-react": "^2.0.1",
@@ -28,9 +28,15 @@
     "three": "0.164.1"
   },
   "devDependencies": {
+    "@types/babel__core": "^7.20.5",
+    "@types/babel-generator": "^6.25.8",
+    "@types/eslint": "^8.56.10",
+    "@types/prop-types": "^15.7.12",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
+    "@types/stats.js": "^0.17.3",
     "@types/three": "0.164.0",
+    "@types/webxr": "^0.5.19",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
