--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-three/cannon": "^6.6.0",
     "@react-three/drei": "^9.105.4",
     "@react-three/fiber": "^8.16.2",
+    "gsap": "^3.12.5",
     "lamina": "^1.1.23",
     "miniplex": "^2.0.0",
     "miniplex-react": "^2.0.1",
