--- a/package.json
+++ b/package.json
@@ -9,26 +9,35 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "clean": "rimraf dist build cache",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "dependencies": {
     "@hookstate/core": "^4.0.1",
     "@mediapipe/camera_utils": "^0.3.1675466862",
     "@mediapipe/drawing_utils": "^0.3.1675466124",
     "@mediapipe/holistic": "^0.5.1675471629",
-    "@pixiv/three-vrm": "^2.1.1",
+    "@pixiv/three-vrm": "2.1.2",
+    "@react-three/cannon": "^6.6.0",
     "@react-three/drei": "^9.105.4",
     "@react-three/fiber": "^8.16.2",
+    "gsap": "^3.12.5",
+    "lamina": "^1.1.23",
     "miniplex": "^2.0.0",
     "miniplex-react": "^2.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "three": "0.162.0"
+    "three": "0.164.1"
   },
   "devDependencies": {
+    "@types/babel__core": "^7.20.5",
+    "@types/babel-generator": "^6.25.8",
+    "@types/eslint": "^8.56.10",
+    "@types/prop-types": "^15.7.12",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
-    "@types/three": "^0.162.0",
+    "@types/stats.js": "^0.17.3",
+    "@types/three": "0.164.1",
+    "@types/webxr": "^0.5.19",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
