Preliminary vanilly cannon, but better idea!

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-three/cannon": "^6.6.0",
     "@react-three/drei": "^9.105.4",
     "@react-three/fiber": "^8.16.2",
+    "cannon-es": "^0.20.0",
     "gsap": "^3.12.5",
     "miniplex": "^2.0.0",
     "miniplex-react": "^2.0.1",
@@ -53,6 +54,7 @@
     "mini-css-extract-plugin": "^2.9.0",
     "postcss-loader": "^8.1.1",
     "prettier": "3.2.5",
+    "r3f-perf": "^7.2.1",
     "rimraf": "^5.0.5",
     "style-loader": "^4.0.0",
     "terser-webpack-plugin": "^5.3.10",
