--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookstate/core": "^4.0.1",
     "@mediapipe/camera_utils": "^0.3.1675466862",
     "@mediapipe/drawing_utils": "^0.3.1675466124",
@@ -20,12 +23,13 @@
     "@react-three/cannon": "^6.6.0",
     "@react-three/drei": "^9.105.4",
     "@react-three/fiber": "^8.16.2",
+    "chart.js": "^4.4.3",
     "gsap": "^3.12.5",
     "miniplex": "^2.0.0",
     "miniplex-react": "^2.0.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
-    "stats.js": "^0.17.0",
     "three": "0.164.1"
   },
   "devDependencies": {
