--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "miniplex-react": "^2.0.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-code-input": "^3.10.1",
     "react-dom": "^18.2.0",
     "three": "0.164.1"
   },
