--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-three/fiber": "^8.16.2",
     "chart.js": "^4.4.3",
     "gsap": "^3.12.5",
+    "lucide-react": "^0.439.0",
     "miniplex": "^2.0.0",
     "miniplex-react": "^2.0.1",
     "react": "^18.2.0",
