--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@react-three/cannon": "^6.6.0",
     "@react-three/drei": "^9.105.4",
     "@react-three/fiber": "^8.16.2",
+    "@types/node": "^22.5.5",
+    "axios": "^1.7.7",
     "chart.js": "^4.4.3",
     "gsap": "^3.12.5",
     "lucide-react": "^0.439.0",
