--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookstate/core": "^4.0.1",
     "@mediapipe/camera_utils": "^0.3.1675466862",
     "@mediapipe/drawing_utils": "^0.3.1675466124",
@@ -22,11 +25,13 @@
     "@react-three/fiber": "^8.16.2",
     "@types/node": "^22.5.5",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.3",
     "gsap": "^3.12.5",
     "lucide-react": "^0.439.0",
     "miniplex": "^2.0.0",
     "miniplex-react": "^2.0.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-code-input": "^3.10.1",
     "react-dom": "^18.2.0",
     "three": "0.164.1"
